k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-demo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-demo-frontend
  template:
    metadata:
      labels:
        app: aks-demo-frontend
    spec:
      containers:
      - name: aks-demo-frontend
        image: aksdemoacr8.azurecr.io/aks-demo-frontend:v2
        ports:
        - containerPort: 80
