k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-demo-api
spec:
  selector:
    app: aks-demo-api
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
