k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-demo-frontend
spec:
  selector:
    app: aks-demo-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
